--- a/css/style.css
+++ b/css/style.css
@@ -9,4 +9,10 @@
     margin: auto;
 }
 
-
+.createFeleblock {
+    display: flex;
+    gap: 5px;
+    width: 100%;
+    height: 60px;
+    border: 1px solid black;
+}
